# USKD

./: .gitignore  LICENSE  commit.bat
doc/: info.txt  План.txt
doc/Hardware/RadSens-master/: link.txt
doc/ТЗ/: ADC.txt  Hardware.txt  server.txt
doc/ТЗ/MQTT/: server_mqtt.txt
sources/: CMakeLists.txt  USKD.uvmpw  USKD.uvmpw.uvgui.Sasha
sources/Device/: CMakeLists.txt  Device.out  Device.uvguix.Sasha  Device.uvoptx  Device.uvprojx
sources/Device/src/: Device.cpp  Device.h  defines.h  main.cpp
sources/Device/src/Hardware/: Bootloader.cpp  Bootloader.h  Button.cpp  Button.h  LED.cpp  LED.h
sources/Device/src/Hardware/CMSIS/: startup_gd32f30x_hd.s  system_gd32f30x.c
sources/Device/src/Hardware/HAL/: HAL_ROM.cpp
sources/Device/src/Modem/: HTTP.cpp  HTTP.h  ProcessorBinaryData.cpp  SIM800.cpp  SIM868.cpp
sources/Device/src/Modem/HTTP/: Answer.cpp  HTTP.cpp  HTTP.h  Request.cpp  Request.h
sources/Device/src/Modem/HTTP/POST/: Answer.cpp  Answer.h  GetConfig.cpp  GitConfig.h  Request.cpp  Request.h
sources/Device/src/Modem/MQTT/: MQTT.cpp  MQTT.h  Messages.cpp  RequestMQTT.cpp  RequestMQTT.h  ResponseMQTT.cpp  ResponseMQTT.h  Sender.cpp  Sender.h  Subscriptions.cpp  Subscriptions.h
sources/Device/src/Modem/_arch/Swagger/: Messages.cpp  Messages.h  Route.cpp  Route.h  Swagger.cpp  Swagger.h
sources/Device/src/Modules/DHT22/: DHT22.cpp  DHT22.h
sources/Device/src/Modules/GC777/: GC777.cpp  GC777.h
sources/Device/src/Modules/MPU6050/: MPU6050.cpp  MPU6050.h  driver_mpu6050.cpp  driver_mpu6050.h  driver_mpu6050_basic.cpp  driver_mpu6050_interface.cpp  driver_mpu6050_interface.h
sources/Device/src/Storage/: MemoryStorage.cpp  MemoryStorage.h  Storage.cpp  Storage.h
sources/Loader/: CMakeLists.txt  Loader.sct  Loader.uvguix.Sasha  Loader.uvoptx  Loader.uvprojx
sources/Loader/src/: Loader.cpp  Loader.h  defines.h  main.cpp
sources/Loader/src/Hardware/: Application.cpp  Application.h  Programmer.cpp  Programmer.h
sources/Loader/src/Hardware/CMSIS/: startup_gd32f30x_hd.s
sources/Loader/src/Hardware/HAL/: HAL_ROM.cpp
sources/Loader/src/Modem/: ProcessorBinaryData.cpp  ProcessorBinaryData.h  ReaderFTP.cpp  ReaderFTP.h  SIM868.cpp  Updater.cpp  Updater.h
sources/VS/: CMakeLists.txt
sources/VS/Device/: Application.cpp  Application.h  CMakeLists.txt  Frame.cpp  main_win.cpp
sources/VS/Device/Hardware/HAL/: HAL_ADC_win.cpp  HAL_I2C_win.cpp  HAL_ROM_win.cpp  HAL_RTC_win.cpp  HAL_SPI_win.cpp  HAL_USART_win.cpp  stm32f1xx_hal_conf_gui.cpp  stm32f1xx_hal_conf_gui.h  system.cpp
sources/VS/Device/_files/: Frame.cpp  Frame.h
sources/VS/HandlerBIN/: HandlerBIN.sln
sources/VS/HandlerBIN/HandlerBIN/: HandlerBIN.cpp  HandlerBIN.vcxproj  HandlerBIN.vcxproj.filters
sources/common/: Globals.cpp  Globals.h  Storage.cpp  Storage.h  common_defines.h
sources/common/Display/: Display.cpp  Display.h  SSD1306.cpp  SSD1306.h
sources/common/Display/Font/: Font.cpp  Font.h  font10_7.inc  font5.inc  font8.inc
sources/common/GD32F30x_Library/Firmware/CMSIS/GD/GD32F30x/Include/: gd32f30x.h
sources/common/GD32F30x_Library/Firmware/GD32F30x_standard_peripheral/Include/: gd32f30x_adc.h  gd32f30x_dma.h  gd32f30x_exti.h  gd32f30x_fmc.h  gd32f30x_fwdgt.h  gd32f30x_gpio.h  gd32f30x_i2c.h  gd32f30x_misc.h  gd32f30x_rcu.h  gd32f30x_spi.h  gd32f30x_timer.h  gd32f30x_usart.h  gd32f30x_wwdgt.h
sources/common/GD32F30x_Library/Firmware/GD32F30x_standard_peripheral/Source/: gd32f30x_adc.c  gd32f30x_ctc.c  gd32f30x_exti.c  gd32f30x_i2c.c  gd32f30x_rcu.c
sources/common/Hardware/: Timer.cpp  Timer.h
sources/common/Hardware/DHT22/: DHT22.cpp  DHT22.h
sources/common/Hardware/HAL/: HAL.cpp  HAL.h  HAL_ADC.cpp  HAL_FWDGT.cpp  HAL_I2C.cpp  HAL_IT.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_ROM.cpp  HAL_RTC.cpp  HAL_SPI2.cpp  HAL_USART.cpp  systick.c
sources/common/Hardware/MPU6050/: driver_mpu6050.cpp
sources/common/Measurer/: Averager.h  Calculator.cpp  Contactors.cpp  Contactors.h  Measurer.cpp  Measurer.h
sources/common/Memory/: M25P80.cpp  M25P80.h  Memory.cpp  Memory.h
sources/common/Modem/: Modem.cpp  Modem.h  Parser.cpp  Parser.h  SIM800_transmit.cpp  SIM868.h  SIM868_transmit.cpp
sources/common/Modem/HTTP/: HTTP.cpp  HTTP.h
sources/common/Modem/MQTT/: MQTT.cpp  MQTT.h
sources/common/Modem/MQTT/Sender/: Counter.cpp  Environment.cpp  GP.cpp  GP.h  GPRS.cpp  GPRS.h  LevelContactors.cpp  LevelContactors.h  Measure.cpp  Measure.h  Sender.cpp  Sender.h  StateContactors.cpp  StateContactors.h  StringState.cpp  StringState.h
sources/common/Modem/_BeforeHTTP/: Parser.cpp  SIM868_transmit.cpp
sources/common/Modem/_BeforeHTTP/MQTT/Sender/: Counter.h  Environment.h  GPRS.cpp  Sender.cpp  Sender.h
sources/common/Settings/: Settings.cpp  Settings.h
sources/common/Utils/: Buffer.h  Debug.cpp  Debug.h  GlobalFunctions.cpp  GlobalFunctions.h  Log.cpp  Log.h  Math.h  Mutex.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h
sources/common/_VS_KEIL/CMSIS/: core_cm4.h
sources/common/_VS_KEIL/std_includes/: cmath  cstdio  cstdlib  cstring  ctime  ctype.h  integer.h  math.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h  windows.h
sources/common/_VS_LIBS/GD32F3/: gd32f30x_adc.cpp  gd32f30x_dma.cpp  gd32f30x_fmc.cpp  gd32f30x_gpio.cpp  gd32f30x_i2c.cpp  gd32f30x_misc.cpp  gd32f30x_rcu.cpp  gd32f30x_spi.cpp  gd32f30x_timer.cpp  gd32f30x_usart.cpp
sources/scripts/Handler/: edit.bat
sources/scripts/Keil/: assembly.bat  edit.bat
sources/scripts/vs_gui/: assembly.bat  edit.bat  run.bat
sources/scripts/vs_keil/: assembly.bat  edit.bat
